Adjust RPM tests for changes in Fedora 41